--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.24.0",
     "chalk": "^5.0.0",
     "chalk-table": "^1.0.2",
+    "dotenv": "^10.0.0",
     "draftlog": "^1.0.13"
   },
   "devDependencies": {
